2023-04-17  Jose E. Marchesi  <jemarch@gnu.org>

	* NEWS: Add entries for 3.1.
	* doc/gendocs_template (For version 3.1): Bump version to 3.1.
	* libpoke/Makefile.am (pvm-vm.h): Remove dependency on $(JITTER).

2023-04-17  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/hacking.org (Continuous Integration): Update.
	* HACKING: Regenerate.

2023-04-13  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* doc/poke.texi (Integral Structs): s/little-endian/big-endian/
	when talking about how gcc encodes bit fields.

2023-03-28  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/poke.rec: Remove priority fields.

2023-03-23  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* common/pk-utils.h (pvm_stof): New declaration.
	(pvm_stod): Likewise.
	* common/pk-utils.c (pvm_stof): Definition of string to `float'
	conversion function.
	(pvm_stod): Definition of string to `double' conversion function.
	* libpoke/pkl-insn.def (PKL_INSN_STOF): New instruction.
	(PKL_INSN_STOD): Likewise.
	* libpoke/pvm.jitter (wrapped-functions): Add `pvm_stof' and
	`pvm_stod'.
	(stof): New instruction to convert string to float32 number
	represented as a `uint<32>'.
	(stod): New instruction to convert string to float64 number
	represented as a `uint<64>'.
	* libpoke/std.pk (stof): New function to wrap `stof' instruction.
	(stod): Likewise.
	* testsuite/poke.pvm/pvm-insns-test.pk (tests): Add entries for
	`stof' and `stod'.
	* testsuite/poke.std/std-test.pk (tests): Likewise.

2023-03-16  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm.jitter (push32): Fix printers.

2023-03-16  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm.jitter (pushlo): Remove.
	(pushhi): Likewise.
	(push32): Changed to accept two arguments.
	* libpoke/pvm-program.c (pvm_program_append_push_instruction):
	Adapt accordingly.

2023-03-16  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/poke.rec (Support #foo within string literals): New bug.

2023-03-05  Jose E. Marchesi  <jemarch@gnu.org>
